Completed testable state of LOD